# xbot

./: .gitignore  COMMIT_MSG.txt  Cargo.toml  README-CN.md  README.md
.github/workflows/: deploy-pages.yml  release-packages.yml
docs/: ARCHITECTURE.md  HYBRID_MODELS.md  INSTALLATION.md  OPERATIONS.md  USAGE.md
npm/: package.json
npm/scripts/: clean-package.js  install.js  prepare-package.js
paged/: api-reference.html  channels-guide.html  developer-guide.html  getting-started.html  index.html  user-guide.html
paged/assets/css/: main.css
paged/assets/js/: main.js
skills/: README.md
skills/clawhub/: SKILL.md
skills/cron/: SKILL.md
skills/data-analyst/: SKILL.md
skills/delivery-rules/: SKILL.md
skills/github/: SKILL.md
skills/github-cli/: SKILL.md
skills/memory/: SKILL.md
skills/memory-entry-writer/: SKILL.md
skills/memory-hygiene/: SKILL.md
skills/project-context/: SKILL.md
skills/project-init/: SKILL.md
skills/scheduled-ops/: SKILL.md
skills/skill-creator/: SKILL.md
skills/software-engineer/: SKILL.md
skills/summarize/: SKILL.md
skills/tmux/: SKILL.md
skills/weather/: SKILL.md
skills/workspace-operator/: SKILL.md
src/: config.rs  diff.rs  lib.rs  main.rs  observability.rs  security.rs  tools.rs  util.rs
src/channels/: dingtalk.rs  discord.rs  email.rs  feishu.rs  matrix.rs  mochat.rs  mod.rs  qq.rs  slack.rs  telegram.rs  wecom.rs  weixin.rs  whatsapp.rs
src/cli/: channels_cli.rs  config_cli.rs  mod.rs  skills_cli.rs
src/engine/: context.rs  memory.rs  orchestrator.rs  skills.rs  subtasks.rs
src/integrations/: mcp.rs  mcp_http.rs  mod.rs
src/providers/: anthropic.rs  mod.rs  registry.rs
src/runtime/: bootstrap.rs  http.rs  worker.rs
src/storage/: session_store.rs
src/tui/: app.rs  markdown.rs  mod.rs  ui.rs
tests/: test_agent_loop.rs  test_channels.rs  test_concurrency.rs  test_config_and_runtime.rs  test_cron_service.rs  test_email_channel.rs  test_exec_web_security.rs  test_feishu_channel.rs  test_filesystem_tools.rs  test_gateway.rs  test_heartbeat_service.rs  test_incomplete_tool_calls.rs  test_memory_consolidation.rs  test_new_providers.rs  test_searxng_embedded.rs  test_searxng_parsing.rs  test_session_history.rs  test_skills_requirements.rs  test_slack_telegram_channels.rs  test_stream_coalescing.rs  test_subagents.rs  test_tool_validation.rs
