[package]
name = "rbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
cron = "0.15"
dirs = "6.0"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
html2text = "0.13"
imap = "2.4"
ipnet = "2.11"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "native-tls", "smtp-transport"] }
local-ip-address = "0.6.5"
mailparse = "0.15"
mime_guess = "2.0"
native-tls = "0.2"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "charset", "gzip", "brotli", "deflate", "socks"] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.33"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
unicode-width = "0.2"
urlencoding = "2.1"
uuid = { version = "1.18", features = ["serde", "v4"] }
walkdir = "2.5"
rustyline = "15.0"
inquire = "0.7"
console = "0.15"
slack-markdown-converter = "0.1"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
serial_test = "3.2"
tempfile = "3.23"
tower = "0.5"
wiremock = "0.6"
