[package]
name = "xbot"
version = "0.1.7"
edition = "2024"
description = "Rust-native autonomous bot runtime for chat automation, tools, scheduled work, and multi-channel delivery"
license = "MIT"
readme = "README.md"
repository = "https://github.com/guoqingbao/xbot"
homepage = "https://github.com/guoqingbao/xbot#readme"
keywords = ["agent", "automation", "chatbot", "llm", "tui"]
categories = ["command-line-utilities"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE.txt",
    "README.md",
    "docs/ARCHITECTURE.md",
    "docs/HYBRID_MODELS.md",
    "docs/INSTALLATION.md",
    "docs/OPERATIONS.md",
    "docs/xbot.png",
    "docs/USAGE.md",
    "skills/**",
    "src/**",
]

[lib]
name = "xbot"
path = "src/lib.rs"

[[bin]]
name = "xbot"
path = "src/main.rs"

[package.metadata.deb]
name = "xbot"
maintainer = "Guoqing Bao <topon@outlook.com>"
copyright = "2026 Guoqing Bao"
license-file = ["LICENSE.txt", "0"]
section = "utils"
priority = "optional"
extended-description = """
xbot is a Rust-native autonomous bot runtime for persistent chat automation,
tool execution, scheduled work, and multi-channel message delivery.

This package installs the xbot CLI and bundled built-in skills.
"""
assets = [
    ["target/release/xbot", "usr/bin/xbot", "755"],
    ["README.md", "usr/share/doc/xbot/README.md", "644"],
    ["LICENSE.txt", "usr/share/doc/xbot/LICENSE.txt", "644"],
    ["skills/**/*", "usr/share/xbot/skills/", "644"],
]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
cron = "0.15"
dirs = "6.0"
futures = "0.3"
glob = "0.3"
hex = "0.4"
hmac = "0.12"
html2text = "0.13"
imap = "3.0.0-alpha.15"
ipnet = "2.11"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "native-tls", "smtp-transport"] }
local-ip-address = "0.6.5"
mailparse = "0.15"
mime_guess = "2.0"
native-tls = { version = "0.2", features = ["vendored"] }
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "charset", "gzip", "brotli", "deflate", "socks"] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.33"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
unicode-width = "0.2"
urlencoding = "2.1"
uuid = { version = "1.18", features = ["serde", "v4"] }
walkdir = "2.5"
rustyline = "15.0"
inquire = "0.7"
console = "0.15"
slack-markdown-converter = "0.1"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
serial_test = "3.2"
tempfile = "3.23"
tower = "0.5"
wiremock = "0.6"
